# app/Modules/Treatment/Application/Commands/AddTreatmentItemCommand.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Modules\Treatment\Application\Commands;
+
+final readonly class AddTreatmentItemCommand
+{
+    /**
+     * @param  array<string, mixed>  $attributes
+     */
+    public function __construct(
+        public string $planId,
+        public array $attributes,
+    ) {}
+}
