# app/Modules/Treatment/Application/Commands/RemoveTreatmentItemCommand.php
@@ -1,0 +1,11 @@
+<?php
+
+namespace App\Modules\Treatment\Application\Commands;
+
+final readonly class RemoveTreatmentItemCommand
+{
+    public function __construct(
+        public string $planId,
+        public string $itemId,
+    ) {}
+}
